<resources>
    <string name="app_name">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Events">Events</string>
    <string name="Articles">Articles</string>
    <string name="Newsletter">Newsletter</string>
    <string name="Blogs">Blogs</string>
    <string name="AboutUs">AboutUs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Home">Home</string>
    <string name="Insights_Club">Insights_Club</string>
    <string name="mr_sandeep_sahu">Mr. Sandeep Sahu</string>
    <string name="todo">todo</string>
    <string name="hybrid">Hybrid</string>
    <string name="view">View</string>
    <string name="Register">Register</string>
    <string name="Online">Online</string>
    <string name="Offline">Offline</string>
    <string name="president">President</string>
    <string name="Position">Position</string>
    <string name="position">Position</string>
    <string name="offline">Offline</string>
</resources>