<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white" >

        <View
            android:id="@+id/view"
            android:layout_width="399dp"
            android:layout_height="267dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/past_events"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.004">

        </View>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="66dp"
            android:layout_height="61dp"
            android:layout_marginTop="176dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.993"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/rec" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_bold"
            android:text="Name of the event"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.035"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:layout_constraintVertical_bias="0.005" />

        <TextView
            android:id="@+id/date"
            android:layout_width="52dp"
            android:layout_height="53dp"
            android:fontFamily="@font/poppins_bold"
            android:text="13 JULY"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.526"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.518" />

        <TextView
            android:id="@+id/eventDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins"
            android:paddingStart="10dp"
            android:paddingEnd="7dp"
            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mollis porta diam, eu placerat massa tempor eu. Ut diam metus, scelerisque ut vestibulum ac, porta vitae mi. Cras sed faucibus nunc. Nam mi felis, mattis at enim ut, varius luctus sapien. Morbi efficitur ex at blandit fermentum. Maecenas ut mattis elit. Mauris eu mi pulvinar, faucibus sem non, consequat elit. Proin posuere rutrum dui eu tempus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sagittis nulla nisl, et cursus est rutrum eu. Integer vehicula sem consectetur auctor hendrerit. Aenean maximus nibh a pellentesque ultrices. Cras ullamcorper arcu sit amet ex sodales faucibus. Nunc consectetur scelerisque eros sit amet accumsan. Sed id leo sit amet lorem pharetra fermentum quis a lorem. Nullam sit amet dapibus lectus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sollicitudin leo massa, eget blandit urna fringilla nec. Sed ullamcorper lectus ac mauris laoreet, vel fermentum neque scelerisque. Ut nibh leo, egestas sed efficitur eget, interdum non est. Sed eget ornare ipsum. Nullam molestie sem vitae orci viverra, quis congue lacus egestas. Suspendisse nec lacus mi."
            android:textColor="#717070"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/poppins"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="Mode :"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventDetails"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/hybrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/poppins_bold"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/hybrid"
            android:textColor="#FFE87B"
            android:textSize="27sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mode"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/button"
            android:layout_width="202dp"
            android:layout_height="63dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.872"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventDetails"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/button_view" />

        <TextView
            android:id="@+id/button_view"
            android:layout_width="128dp"
            android:layout_height="43dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins_bold"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/view"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/button"
            app:layout_constraintEnd_toEndOf="@+id/button"
            app:layout_constraintHorizontal_bias="0.436"
            app:layout_constraintStart_toStartOf="@+id/button"
            app:layout_constraintTop_toTopOf="@+id/button"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
